# vic

./: .gitignore  CMakeLists.txt  cloc_this.sh  readme.md  todo_list.md
res/: todo_list.md  win_getch_ascii.txt
src/: bottomline_loop.c  bottomline_loop.h  draw_ui.c  draw_ui.h  file_sl.c  file_sl.h  file_struct.c  file_struct.h  highlight.c  highlight.h  insert_loop.c  insert_loop.h  lines_list.c  lines_list.h  log_module.c  log_module.h  main.c  main.h  main_loop.c  main_loop.h  normal_loop.c  normal_loop.h  termios_set.c  termios_set.h  testmain.c
src/test/: printf_color.c  printf_color.h  testmain.c  win_test_main.c
